--- a/XIVLauncher/App.config
+++ b/XIVLauncher/App.config
@@ -12,7 +12,7 @@
     <userSettings>
         <XIVLauncher.Properties.Settings>
             <setting name="GamePath" serializeAs="String">
-                <value/>
+                <value />
             </setting>
             <setting name="IsDx11" serializeAs="String">
                 <value>True</value>
@@ -37,6 +37,9 @@
             </setting>
             <setting name="SteamIntegrationEnabled" serializeAs="String">
                 <value>False</value>
+            </setting>
+            <setting name="AdditionalLaunchArgs" serializeAs="String">
+                <value />
             </setting>
         </XIVLauncher.Properties.Settings>
         <XIVLauncherWPF.Properties.Settings>
