--- a/XIVLauncher/packages.config
+++ b/XIVLauncher/packages.config
@@ -13,5 +13,6 @@
   <package id="Serilog" version="2.8.0" targetFramework="net462" />
   <package id="Serilog.Sinks.Async" version="1.4.0" targetFramework="net462" />
   <package id="Serilog.Sinks.File" version="4.0.0" targetFramework="net462" />
+  <package id="System.Collections.Immutable" version="1.5.0" targetFramework="net471" />
   <package id="System.ValueTuple" version="4.5.0" targetFramework="net471" />
 </packages>
