refactor: move settings into separate namespace
# Conflicts:
#	XIVLauncher/Addon/AddonManager.cs
#	XIVLauncher/Addon/IAddon.cs
#	XIVLauncher/Addon/Implementations/CharacterBackupAddon.cs
#	XIVLauncher/Addon/Implementations/CharacterSyncAddon.cs
#	XIVLauncher/Addon/Implementations/GenericAddon.cs
#	XIVLauncher/Addon/Implementations/XivRichPresence/RichPresenceAddon.cs
#	XIVLauncher/App.xaml.cs
#	XIVLauncher/Settings/DalamudSettings.cs
#	XIVLauncher/Windows/MainWindow.xaml.cs
#	XIVLauncher/XIVLauncher.csproj

--- a/XIVLauncher/XIVLauncher.csproj
+++ b/XIVLauncher/XIVLauncher.csproj
@@ -149,6 +149,7 @@
     <Compile Include="Encryption\ArgumentBuilder.cs" />
     <Compile Include="Encryption\Blowfish.cs" />
     <Compile Include="Game\OauthLoginException.cs" />
+	<Compile Include="Settings\OldSettings.cs" />
     <Compile Include="Windows\ChangelogWindow.xaml.cs">
       <DependentUpon>ChangelogWindow.xaml</DependentUpon>
     </Compile>
@@ -176,7 +177,7 @@
     <Compile Include="Windows\PatchHandlerWindow.xaml.cs">
       <DependentUpon>PatchHandlerWindow.xaml</DependentUpon>
     </Compile>
-    <Compile Include="Settings.cs" />
+    <Compile Include="Settings\Settings.cs" />
     <Compile Include="Windows\SettingsWindow.xaml.cs">
       <DependentUpon>SettingsWindow.xaml</DependentUpon>
     </Compile>
