--- a/XIVLauncher/XIVLauncher.csproj
+++ b/XIVLauncher/XIVLauncher.csproj
@@ -177,7 +177,7 @@
     <Compile Include="Windows\PatchHandlerWindow.xaml.cs">
       <DependentUpon>PatchHandlerWindow.xaml</DependentUpon>
     </Compile>
-    <Compile Include="Settings\Settings.cs" />
+    <Compile Include="Settings\LauncherSettings.cs" />
     <Compile Include="Windows\SettingsWindow.xaml.cs">
       <DependentUpon>SettingsWindow.xaml</DependentUpon>
     </Compile>
