--- a/XIVLauncher/packages.config
+++ b/XIVLauncher/packages.config
@@ -1,9 +1,12 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="AdysTech.CredentialManager" version="1.8.0" targetFramework="net461" />
+  <package id="Autoupdater.NET.Official" version="1.5.8" targetFramework="net471" />
+  <package id="Costura.Fody" version="4.1.0" targetFramework="net471" />
   <package id="DeltaCompressionDotNet" version="1.1.0" targetFramework="net471" />
   <package id="Dragablz" version="0.0.3.203" targetFramework="net461" />
   <package id="Extended.Wpf.Toolkit" version="3.5.0" targetFramework="net462" />
+  <package id="Fody" version="6.0.6" targetFramework="net471" developmentDependency="true" />
   <package id="MaterialDesignColors" version="1.1.2" targetFramework="net462" />
   <package id="MaterialDesignThemes" version="2.5.1" targetFramework="net462" />
   <package id="Microsoft.WindowsAPICodePack-Core" version="1.1.0.0" targetFramework="net461" />
@@ -16,7 +19,6 @@
   <package id="Serilog.Sinks.File" version="4.0.0" targetFramework="net462" />
   <package id="SharpCompress" version="0.17.1" targetFramework="net471" />
   <package id="Splat" version="1.6.2" targetFramework="net471" />
-  <package id="squirrel.windows" version="1.9.1" targetFramework="net471" />
   <package id="System.Collections.Immutable" version="1.5.0" targetFramework="net471" />
   <package id="System.Diagnostics.Debug" version="4.3.0" targetFramework="net471" />
   <package id="System.ValueTuple" version="4.5.0" targetFramework="net471" />
